[gd_scene load_steps=9 format=2]

[ext_resource path="res://worlds/interactive_items/checkpoints/scripts/Checkpoint.gd" type="Script" id=1]
[ext_resource path="res://worlds/interactive_items/checkpoints/assets/Checkpoint.png" type="Texture" id=2]
[ext_resource path="res://worlds/interactive_items/checkpoints/assets/sounds/obelisk_effect.mp3" type="AudioStream" id=3]

[sub_resource type="Animation" id=2]
length = 0.001

[sub_resource type="Animation" id=3]
resource_name = "check"
length = 1.3
tracks/0/type = "value"
tracks/0/path = NodePath("Checkpoint2D/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Checkpoint2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.6, 1.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -5 ), Vector2( 0, -9.93411e-07 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "checked"
length = 0.5
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Checkpoint2D/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11, 12 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Checkpoint2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.25, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -5 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "idle"
length = 1.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Checkpoint2D/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Checkpoint2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.6, 1.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -5 ), Vector2( 0, -9.93411e-07 ) ]
}

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 10, 93 )

[node name="Checkpoint" type="Node2D"]
scale = Vector2( 0.5, 0.5 )
__meta__ = {
"_edit_group_": true
}

[node name="Checkpoint2D" type="Area2D" parent="."]
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Checkpoint2D"]
position = Vector2( 4, -118 )
texture = ExtResource( 2 )
hframes = 14
vframes = 2
frame = 14

[node name="Animation" type="AnimationPlayer" parent="Checkpoint2D"]
root_node = NodePath("../..")
anims/RESET = SubResource( 2 )
anims/check = SubResource( 3 )
anims/checked = SubResource( 4 )
anims/idle = SubResource( 5 )

[node name="Audio" type="AudioStreamPlayer2D" parent="Checkpoint2D"]
stream = ExtResource( 3 )
volume_db = -15.559

[node name="Hitbox" type="CollisionShape2D" parent="Checkpoint2D"]
position = Vector2( 0, -43 )
shape = SubResource( 6 )

[connection signal="body_entered" from="Checkpoint2D" to="Checkpoint2D" method="_on_Checkpoint2D_body_entered"]
[connection signal="animation_finished" from="Checkpoint2D/Animation" to="Checkpoint2D" method="_on_Animation_animation_finished"]
[connection signal="animation_started" from="Checkpoint2D/Animation" to="Checkpoint2D" method="_on_Animation_animation_started"]
